[tool.poetry]
name = "nitori_org"
version = "0.1.0"
description = ""
authors = ["Jennifer Wilcox <jennifer@nitori.org>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pelican = "^4.2"
markdown = "^3.2"
invoke = "^2.2.0"
libsass = "^0.23.0"
pelican-webassets = "^2.0.0"
pelican-seo = "^1.0.0"
toml = "^0.10.2"
cssmin = "^0.2.0"
pelican-sitemap = "^1.2.0"


[tool.poetry.dev-dependencies]
black = "*"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
