[project]
name = "altgo-us"
version = "0.2.0"
description = "A collection of support groups, resources, and legal help for Alabamians included in the transgender umbrella."
authors = [
		{ name = "Jennifer Wilcox", email = "jennifer@nitori.org" },
		{ name = "Espi Marisa", email = "contact@espi.me" }
]

readme = "README.md"
requires-python = ">=3.13,<4.0"

dependencies = [
	"markdown (>=3.7,<4.0)",
	"pelican (>=4.11.0,<5.0.0)",
	"invoke (>=2.2.0,<3.0.0)",
	"libsass (>=0.23.0,<0.24.0)",
	"pelican-webassets (>=2.1.0,<3.0.0)",
	"pelican-seo (>=1.3.0,<2.0.0)",
	"toml (>=0.10.2,<0.11.0)", # we can remove this when i'm done, native toml >= py 3.12
	"cssmin (>=0.2.0,<0.3.0)",
	"pelican-sitemap (>=1.2.0,<2.0.0)",
]

[project.urls]
Homepage = "https://altgo.us"
Repositry = "https://github.com/JennToo/altgo-us"
Issues = "https://github.com/JennToo/altgo-us/issues"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
