[tool.poetry]
name = "altgo-us"
version = "0.1.0"
description = "A collection of support groups, resources, and legal help for Alabamians included in the transgender umbrella."
authors = [
	"Jennifer Wilcox <jennifer@nitori.org>",
	"Espi Marisa <contact@espi.me>",
]

package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pelican = "^4.11"
markdown = "^3.2"
invoke = "^2.2.0"
libsass = "^0.23.0"
pelican-webassets = "^2.1.0"
pelican-seo = "^1.3.0"
toml = "^0.10.2"
cssmin = "^0.2.0"
pelican-sitemap = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "*"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
